--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-webgl-noiseeffect",
-  "version": "1.0.6",
-  "description": "",
+  "version": "1.0.7",
+  "description": "React component for WebGl noise effect.",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
