--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "react-webgl-noiseeffect",
-  "version": "1.0.10",
+  "version": "1.0.11",
   "description": "React component for WebGl noise effect.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xmluozp/react-webgl-noiseeffect"
+  },
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +16,7 @@
     "deploy": "gh-pages -d examples/dist",
     "publish-demo": "npm run build && npm run deploy"
   },
-  "author": "",
+  "author": "Zhaoping",
   "license": "ISC",
   "peerDependencies": {
     "react": "^16.3.0",
